syntax = "proto3";

import "subtitled_html.proto";
import "google/protobuf/any.proto";

package model;

option java_package = "org.oppia.app.model";
option java_multiple_files = true;

message Exploration {
  string initStateName = 1;
  repeated ParamChange param_changes = 2;
  repeated ParamSpec param_specs = 3;
  repeated State states = 4;
  string title = 5;
  string language_code = 6;
}

message ParamChange {
  string generator_id = 1;
  string name = 2;
  CustomizationArgs customization_args = 3;
}

message ParamSpec {
  string obj_type = 1;
}

message State {
  SubtitledHtml content = 1;
  repeated ParamChange param_changes = 2;
  Interaction interaction = 3;
  // Either we can do this, or follow exactly what is there in the front end as:
  // RecordedVoiceover recorded_voiceovers = 1;
  // and RecordedVoiceOver{  map<string, VoiceoverMapping> voiceoverMapping = 1;}
  // Mapping from content_id to a VoiceoverMapping
  map<string, VoiceoverMapping> recorded_voiceovers = 4;
  // Same comment here
  map<string, TranslationMapping>written_translations = 5;
  bool solicit_answer_details = 6;
  string classifier_model_id = 7;
}

message CustomizationArgs {
  bool is_parse_with_jinja = 1;
  string value = 2;
}

message VoiceoverMapping {
  // Mapping from language_code to VoiceOver
  map<string, Voiceover> voiceover_mapping = 1;
}

message Voiceover {
  string file_name = 1;
  int64 file_size_bytes = 2;
  bool needs_update = 3;
}

message Interaction {
  string id = 1;
  repeated AnswerGroup answer_groups = 2;
  Solution solution = 3;
  repeated AnswerGroup confirmed_unclassified_answers = 4;
  Hint hint = 5;
  Outcome default_outcome = 6;
  map<string, CustomizationArgs> customization_args = 7;
}

message TranslationMapping {
  // Mapping from language_code to Translation
  map<string, Translation> translation_mapping = 1;
}

message Translation {
  string html = 1;
  bool needs_update = 2;
}

message AnswerGroup {
  Outcome outcome = 1;
  repeated RuleSpec rule_specs = 2;
  repeated google.protobuf.Any training_data = 3;
}

message Solution {
  string interaction_id = 1;
  bool answer_is_exclusive = 2;
  string correct_answer = 3;
  SubtitledHtml explanation = 4;
}

message Hint {
  SubtitledHtml hint_content = 1;
}

message Outcome {
  string dest = 1;
  string refresher_exploration_id = 2;
  SubtitledHtml feedback = 3;
  repeated ParamChange param_changes = 4;
  string missing_prerequisite_skill_id = 5;
  bool labelled_as_correct = 6;
}

message RuleSpec {
  map<string, google.protobuf.Any> inputs = 1;
  string rule_type = 2;
}
